--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
   <div class="common">
   <h2>Supervisor</h2>
   <p>Monitors activity to identify project roadblocks</p>
-  <img src="images/icon-supervisor.svg" alt="">
+  <img src="icon-supervisor.svg" alt="">
 </div>
 <div class="common">  
 <h2>Team Builder</h2>
   <p>Scans our talent network to create the optimal team for your project</p>
-  <img src="images/icon-team-builder.svg" alt="">
+  <img src="icon-team-builder.svg" alt="">
 </div>
 <div class="common">
   <h2>Calculator</h2>
   <p>Uses data from past projects to provide better delivery estimates</p>
-  <img src="images/icon-calculator.svg" alt="">
+  <img src="icon-calculator.svg" alt="">
 </div>
 <div class="common"> 
   <h2>Karma</h2>
   <p>Regularly evaluates our talent to ensure quality</p>
-  <img src="images/icon-karma.svg" alt="">
+  <img src="icon-karma.svg" alt="">
 </div>
   </div>
 </main>
