--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    footer{
-      bottom:0px;
-      margin: auto;
-      width: 100%;
-      margin-top: 20px;
-    }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  <h1 class="center" style="margin-bottom: 0px;margin-top: 20px ;font-weight: 100;color: hsl(0, 0%, 56%);">Reliable, efficient delivery</h1>
-  <h1 class="center" style="margin-top: 6px;font-weight: 600;color: hsla(234, 12%, 34%,1.5);">Powered by Technology</h1>
-  <main>
-  <p class="center" style="line-height: 22px;color:  hsl(0, 0%, 61%);margin-bottom: 50px;">Our Artificial Intelligence powered tools use millions of project data<br> points 
+  <h1 class="center">Reliable, efficient delivery</h1>
+  <h1 class="center">Powered by Technology</h1>
+  <p class="center k">Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful</p>
   <div class="body">
   <div class="common">
@@ -37,18 +30,17 @@
   <p>Scans our talent network to create the optimal team for your project</p>
   <img src="icon-team-builder.svg" alt="">
 </div>
-<div class="common">
-  <h2>Calculator</h2>
-  <p>Uses data from past projects to provide better delivery estimates</p>
-  <img src="icon-calculator.svg" alt="">
-</div>
 <div class="common"> 
   <h2>Karma</h2>
   <p>Regularly evaluates our talent to ensure quality</p>
   <img src="icon-karma.svg" alt="">
 </div>
+<div class="common">
+  <h2>Calculator</h2>
+  <p>Uses data from past projects to provide better delivery estimates</p>
+  <img src="icon-calculator.svg" alt="">
+</div>
   </div>
-</main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
